k8s/geonames-sparql2/geonames-sparql-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: geonames-sparql2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geonames-sparql2
  serviceName: geonames-sparql2
  template:
    metadata:
      labels:
        app: geonames-sparql2
    spec:

      containers:
        - name: app
          image: stain/jena-fuseki:5.1.0
          ports:
            - containerPort: 3030
          volumeMounts:
            - name: fuseki
              mountPath: /fuseki
            - name: config
              mountPath: /fuseki/config.ttl
              subPath: config.ttl
            - name: data
              mountPath: /data
              subPath: production
      volumes:
        - name: config
          configMap:
            name: geonames-fuseki-config
      securityContext: # To access the data volume.
        fsGroup: 100
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 50Gi
        storageClassName: do-block-storage
    - metadata:
        name: fuseki
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: do-block-storage
