k8s/geonames-sparql2/geonames-sparql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: geonames-sparql2
spec:
  ports:
    - port: 80
      targetPort: 3030
  selector:
    app: geonames-sparql2
