k8s/geonames-sparql2/geonames-sparql-ingress.yml
# See https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geonames-sparql2
spec:
  ingressClassName: nginx
  rules:
    - host: demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /geonames2
            pathType: Prefix
            backend:
              service:
                name: geonames-sparql2
                port:
                  number: 80
